--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,6 @@
-<div class="main">
-  <h1>Search</h1>
-  <app-searchbar></app-searchbar>
+<div class="bg-image">
+  <div class="main">
+    <h1>RECIPE</h1>
+    <app-searchbar></app-searchbar>
+  </div>
 </div>
-<div class="overlay"></div>
