--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,3 +5,49 @@
   margin-top: 150px;
   padding: 1rem;
 }
+
+p {
+  text-align: center;
+  padding: 1rem;
+  color: grey;
+}
+
+app-header {
+  position: absolute;
+  z-index: 30;
+}
+
+// SPINNER
+
+.lds-ripple {
+  display: inline-block;
+  position: relative;
+  width: 64px;
+  height: 64px;
+}
+.lds-ripple div {
+  position: absolute;
+  border: 4px solid rgb(58, 58, 58);
+  opacity: 1;
+  border-radius: 50%;
+  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.lds-ripple div:nth-child(2) {
+  animation-delay: -0.5s;
+}
+@keyframes lds-ripple {
+  0% {
+    top: 28px;
+    left: 28px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: -1px;
+    left: -1px;
+    width: 58px;
+    height: 58px;
+    opacity: 0;
+  }
+}
