--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,4 +1,5 @@
 .main {
+  z-index: 3;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -7,16 +8,26 @@
   width: 100vw;
   top: 0px;
   left: 0px;
-  background-image: url('../../assets/header.jpg');
-  background-position: center; /* Center the image */
-  background-repeat: no-repeat; /* Do not repeat the image */
-  background-size: cover;
   box-shadow: 0 3px 3px rgba(0, 0, 0, 0.16), 0 3px 3px rgba(0, 0, 0, 0.16);
   position: fixed;
 }
 
+.bg-image {
+  z-index: 0;
+  height: 150px;
+  width: 100vw;
+  top: 0px;
+  left: 0px;
+  background-image: url('../../assets/header.jpg');
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover;
+  position: fixed;
+}
 h1 {
+  margin-top: 0;
   color: white;
+  letter-spacing: 20px;
 }
 *,
 *:before,
