--- a/src/app/recipe/recipe.component.scss
+++ b/src/app/recipe/recipe.component.scss
@@ -4,9 +4,121 @@
   justify-content: center;
   box-shadow: 0 3px 3px rgba(0, 0, 0, 0.16), 0 3px 3px rgba(0, 0, 0, 0.16);
   background-color: rgb(255, 255, 255);
-  margin: 1rem;
-  padding: 1rem;
-  max-width: 300px;
-  min-width: 300px;
+  margin: 0px;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  @media (max-width: 600px) {
+    width: 320px;
+  }
+  @media (min-width: 600px) {
+    width: 500px;
+  }
   border-radius: 10px;
+}
+
+.card-title {
+  font-size: 20px;
+  text-align: right;
+  padding: 0 2rem 0 2rem;
+}
+
+.card-header {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 1rem;
+  background-color: rgb(255, 245, 154);
+  border-radius: 10px 10px 0px 0px;
+}
+
+.no-thumbnail {
+  text-align: center;
+  justify-content: center;
+}
+
+img {
+  border-radius: 10px;
+  height: 70px;
+}
+
+.card-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  .card-buttons {
+    align-self: center;
+  }
+}
+
+ol {
+  text-align: center;
+  list-style-position: inside;
+}
+
+.card-buttons {
+  padding-bottom: 1rem;
+}
+
+button {
+  line-height: 20px;
+  outline: none;
+  border: none;
+  padding: 0.5rem;
+  border-radius: 10px;
+  background: rgba(158, 210, 255, 1);
+  background: -moz-linear-gradient(
+    left,
+    rgba(158, 210, 255, 1) 0%,
+    rgba(255, 201, 255, 0.72) 35%,
+    rgba(158, 210, 255, 0.38) 77%,
+    rgba(255, 207, 255, 0.19) 100%
+  );
+  background: -webkit-gradient(
+    left top,
+    right top,
+    color-stop(0%, rgba(158, 210, 255, 1)),
+    color-stop(35%, rgba(255, 201, 255, 0.72)),
+    color-stop(77%, rgba(158, 210, 255, 0.38)),
+    color-stop(100%, rgba(255, 207, 255, 0.19))
+  );
+  background: -webkit-linear-gradient(
+    left,
+    rgba(158, 210, 255, 1) 0%,
+    rgba(255, 201, 255, 0.72) 35%,
+    rgba(158, 210, 255, 0.38) 77%,
+    rgba(255, 207, 255, 0.19) 100%
+  );
+  background: -o-linear-gradient(
+    left,
+    rgba(158, 210, 255, 1) 0%,
+    rgba(255, 201, 255, 0.72) 35%,
+    rgba(158, 210, 255, 0.38) 77%,
+    rgba(255, 207, 255, 0.19) 100%
+  );
+  background: -ms-linear-gradient(
+    left,
+    rgba(158, 210, 255, 1) 0%,
+    rgba(255, 201, 255, 0.72) 35%,
+    rgba(158, 210, 255, 0.38) 77%,
+    rgba(255, 207, 255, 0.19) 100%
+  );
+  background: linear-gradient(
+    to right,
+    rgba(158, 210, 255, 1) 0%,
+    rgba(255, 201, 255, 0.72) 35%,
+    rgba(158, 210, 255, 0.38) 77%,
+    rgba(255, 207, 255, 0.19) 100%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9ed2ff', endColorstr='#ffcfff', GradientType=1 );
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+.fa {
+  position: absolute;
+  z-index: 0;
+  line-height: 20px;
 }
