--- a/src/app/recipe/recipe.component.scss
+++ b/src/app/recipe/recipe.component.scss
@@ -1,124 +1,153 @@
+.shadow-box {
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.3), 0 5px 5px rgba(0, 0, 0, 0.3);
+  position: relative;
+  z-index: 0;
+}
+
+.shadow-box:hover {
+  cursor: pointer;
+  transform: scale(1.02);
+  transition: transform 0.2s;
+}
+
 .card {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.16), 0 3px 3px rgba(0, 0, 0, 0.16);
-  background-color: rgb(255, 255, 255);
+  background-image: url('../../assets/blackboard.jpg');
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover;
   margin: 0px;
   margin-top: 1rem;
   margin-bottom: 1rem;
-  @media (max-width: 600px) {
-    width: 320px;
-  }
-  @media (min-width: 600px) {
-    width: 500px;
-  }
-  border-radius: 10px;
-}
-
-.card-title {
-  font-size: 20px;
-  text-align: right;
-  padding: 0 2rem 0 2rem;
+  padding: 1rem;
+  width: auto;
+  font-family: 'Nanum Brush Script', cursive;
+  border: 10px solid transparent;
+  border-image: url('../../assets/border.jpeg') 25 25 20 round;
+  -webkit-box-shadow: inset 0px 0px 24px 3px rgba(0, 0, 0, 1);
+  -moz-box-shadow: inset 0px 0px 24px 3px rgba(0, 0, 0, 1);
+  box-shadow: inset 0px 0px 24px 3px rgba(0, 0, 0, 1);
+  height: auto;
 }
 
 .card-header {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
-  padding: 1rem;
-  background-color: rgb(255, 245, 154);
-  border-radius: 10px 10px 0px 0px;
+  padding: 0;
 }
 
-.no-thumbnail {
+.card-title {
+  font-size: 30px;
   text-align: center;
-  justify-content: center;
+  padding: 0 2rem 0 2rem;
+  font-weight: bold;
+  color: rgba(255, 255, 255, 0.781);
+  max-width: 300px;
+  // border: 2px solid rgba(255, 255, 255, 0.336);
 }
 
 img {
-  border-radius: 10px;
-  height: 70px;
 }
 
 .card-content {
   display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
+  flex-direction: row;
+  justify-content: space-around;
   align-items: center;
-  .card-buttons {
-    align-self: center;
+  @media (max-width: 400px) {
+    flex-direction: column;
+    align-items: center;
   }
 }
 
+.no-thumbnail {
+  justify-content: center;
+}
+
+li {
+  // display: inline;
+  font-size: 18px;
+  // letter-spacing: 2px;
+}
+
 ol {
-  text-align: center;
+  text-align: start;
   list-style-position: inside;
+  margin: 0;
+  padding: 0;
 }
 
 .card-buttons {
-  padding-bottom: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 button {
-  line-height: 20px;
   outline: none;
   border: none;
   padding: 0.5rem;
   border-radius: 10px;
+  width: 100%;
   background: rgba(158, 210, 255, 1);
-  background: -moz-linear-gradient(
-    left,
-    rgba(158, 210, 255, 1) 0%,
-    rgba(255, 201, 255, 0.72) 35%,
-    rgba(158, 210, 255, 0.38) 77%,
-    rgba(255, 207, 255, 0.19) 100%
-  );
-  background: -webkit-gradient(
-    left top,
-    right top,
-    color-stop(0%, rgba(158, 210, 255, 1)),
-    color-stop(35%, rgba(255, 201, 255, 0.72)),
-    color-stop(77%, rgba(158, 210, 255, 0.38)),
-    color-stop(100%, rgba(255, 207, 255, 0.19))
-  );
-  background: -webkit-linear-gradient(
-    left,
-    rgba(158, 210, 255, 1) 0%,
-    rgba(255, 201, 255, 0.72) 35%,
-    rgba(158, 210, 255, 0.38) 77%,
-    rgba(255, 207, 255, 0.19) 100%
-  );
-  background: -o-linear-gradient(
-    left,
-    rgba(158, 210, 255, 1) 0%,
-    rgba(255, 201, 255, 0.72) 35%,
-    rgba(158, 210, 255, 0.38) 77%,
-    rgba(255, 207, 255, 0.19) 100%
-  );
-  background: -ms-linear-gradient(
-    left,
-    rgba(158, 210, 255, 1) 0%,
-    rgba(255, 201, 255, 0.72) 35%,
-    rgba(158, 210, 255, 0.38) 77%,
-    rgba(255, 207, 255, 0.19) 100%
-  );
-  background: linear-gradient(
-    to right,
-    rgba(158, 210, 255, 1) 0%,
-    rgba(255, 201, 255, 0.72) 35%,
-    rgba(158, 210, 255, 0.38) 77%,
-    rgba(255, 207, 255, 0.19) 100%
-  );
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9ed2ff', endColorstr='#ffcfff', GradientType=1 );
+  font-family: 'Nanum Brush Script', cursive;
+  font-size: 20px;
 }
 
 button:hover {
   cursor: pointer;
 }
 
-.fa {
+.ingredients-title {
+  font-size: 22px;
+  text-decoration: underline;
+  letter-spacing: 5px;
+  padding: 0 1rem 0 1rem;
+  background-color: yellow;
+}
+
+.postit {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  font-family: 'Nanum Brush Script', cursive;
+  font-weight: bold;
+  width: auto;
+  padding: 1rem;
+  background-color: rgb(255, 255, 175);
+  /* Firefox */
+  -moz-box-shadow: 4px 4px 5px rgba(33, 33, 33, 0.336);
+  /* Safari+Chrome */
+  -webkit-box-shadow: 4px 4px 5px rgba(33, 33, 33, 0.336);
+  /* Opera */
+  box-shadow: 4px 4px 5px rgba(33, 33, 33, 0.336);
+  transform: rotate(1deg);
+
+  @media (max-width: 400px) {
+    order: 2;
+  }
+}
+
+.img-container {
+  position: relative;
+  @media (max-width: 400px) {
+    order: 1;
+  }
+}
+
+.tape {
+  float: left;
   position: absolute;
-  z-index: 0;
-  line-height: 20px;
+  right: -20px;
+  top: 0px;
+  z-index: 100;
+  width: 50px;
+  height: 15px;
+  background-color: rgba(248, 248, 161, 0.658);
+  margin-bottom: 100px;
+  transform: rotate(45deg);
 }
